@@ -5,13 +5,11 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Component;
 
+import com.super_mercado.backend.dtos.lists.ProductListDTO;
 import com.super_mercado.backend.dtos.requests.BuyRequestDTO;
-import com.super_mercado.backend.dtos.responses.BuyProductResponseDTO;
 import com.super_mercado.backend.dtos.responses.BuyResponseDTO;
 import com.super_mercado.backend.entities.Buy;
 import com.super_mercado.backend.entities.BuyProduct;
@@ -21,44 +19,24 @@ import com.super_mercado.backend.mappers.BuyMapper;
 @Component
 public class BuyMapperImpl implements BuyMapper {
 	public Buy toBuy(BuyRequestDTO dto) {
-		Buy buy = new Buy();
-		BeanUtils.copyProperties(dto, buy);
-		buy.setId(UUID.randomUUID().toString());
-		buy.setDate(LocalDate.now());
-		buy.setTime(LocalTime.now());
-		buy.setValue(BigDecimal.ZERO);
-		
-		List<BuyProduct> buyProducts = dto.getBuyProductRequestDTOs().stream().map((i) -> {
-			BuyProduct buyProduct = new BuyProduct();
-			buyProduct.setAmount(i.getAmount());
-			
-			Product product = new Product();
-			
-			product.setBarcode(i.getProductRequestDTO().getBarcode());
-	        
-			buyProduct.setProduct(product);
-			
+		List<BuyProduct> buyProducts = dto.getProductListDTOs().stream().map((i) -> {
+			Product product = new Product(null, i.getBarcode(), null, null, null);
+			BuyProduct buyProduct = new BuyProduct(null, null, product, i.getAmount());
 			return buyProduct;
-		}).collect(Collectors.toList());
-		
-		buy.setBuyProducts(buyProducts);
-		
+		}).toList();
+		Buy buy = new Buy(UUID.randomUUID().toString(), LocalDate.now(), LocalTime.now(), dto.getCustomerDocment(),
+				BigDecimal.ZERO, buyProducts);
 		return buy;
 	}
 
 	public BuyResponseDTO toBuyResponseDTO(Buy buy) {
-		BuyResponseDTO buyResponseDTO = new BuyResponseDTO();
-		BeanUtils.copyProperties(buy, buyResponseDTO);
-		
-		List<BuyProductResponseDTO> buyProductResponseDTOs = buy.getBuyProducts().stream().map((i) -> {
-			BuyProductResponseDTO buyProductResponseDTO = new BuyProductResponseDTO();
-			BeanUtils.copyProperties(i, buyResponseDTO);
-			
-			return buyProductResponseDTO;
+		List<ProductListDTO> productListDTOs = buy.getBuyProducts().stream().map((i) -> {
+			ProductListDTO productListDTO = new ProductListDTO(i.getProduct().getBarcode(),
+					i.getProduct().getDescription(), i.getProduct().getPrice(), i.getAmount());
+			return productListDTO;
 		}).toList();
-		
-		buyResponseDTO.setBuyProductResponseDTOs(buyProductResponseDTOs);
-		
+		BuyResponseDTO buyResponseDTO = new BuyResponseDTO(buy.getId(), buy.getDate(), buy.getTime(),
+				buy.getCustomerDocument(), buy.getValue(), productListDTOs);
 		return buyResponseDTO;
 	}
 }
